# rust_set_interval

./: .env  Cargo.toml  docker-compose.yaml
migrations/2022-09-05-125756_create_names_table/: down.sql  up.sql
src/: constants.rs  error.rs  main.rs  schema.rs
src/api/: mod.rs  names_controller.rs  version_controller.rs
src/config/: app.rs  db.rs
src/models/: mod.rs  names.rs  response.rs
src/services/: mod.rs  names_service.rs
